tests/error/not_enough_inputs.ca

def f(int a, int b)
    print('a = ' a)
    print('b = ' b)

-- disabled for now
-- f(1, 2)
-- f(1)
-- f()
